SFUSA/force-app/main/default/objects/Issue_Type__mdt/fields/Label__c.field-meta.xml
<CustomField>
        <fullName>Label__c</fullName>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>