SFUSA/force-app/main/default/objects/Issue_Type__mdt/fields/Name__c.field-meta.xml
<CustomField>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>